--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                         <p>Gyeongsang National University (2016-2023)</p>
                         <h4>Intensive C++-Oriented Game Development Program</h4>
                         <p>DigiPen Game Academy (2024-2025)</p>
+                        <h4>Leveraging Unreal Engine for Digital Twin Development</h4>
+                        <p>Next Stage (2025)</p>
                     </div>
                 </div>
             </div>
